🐛 fix Cursor (visible on touchscreen, not disappearing in safari)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,9 @@
         font-style: normal;
     }
 }
+
+@media (hover: none) {
+    #cursor {
+        display: none;
+    }
+}
